Fix (again) for overflow of iPad on home

--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -7,6 +7,10 @@ body.nav-open {
   width: 100vw;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .app {
 
   .nav-wrapper {
