--- a/src/assets/scss/templates/_page-home.scss
+++ b/src/assets/scss/templates/_page-home.scss
@@ -6,10 +6,6 @@
 .page-home {
   transform: translateZ(0); // hardware accelerate background-color change on scroll
 
-  > [class*="page-home__screen-block"] {
-    overflow: hidden;
-  }
-
   &__screen-block--welcome {
     .entrance {
       transition: opacity 0.8s ease-in-out;
